--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -8,12 +8,8 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.css"
-      integrity="sha512-BjQ2UJBKmkJynH20LaFAU4E/kOtE7r7it8YvfwhlyGA9HqB6ZQj1Z9d8tN+y3v2RYunBtcQ8NlbNOkXFkLfobQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    href=“https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css”
+    rel=“stylesheet” />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -26,6 +22,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="js/02-lightbox.js" type="module"></script>
+    <script type="module" src="js/02-lightbox.js"></script>
   </body>
 </html>
